--- a/react-error-and-logging/error_and_logging/package.json
+++ b/react-error-and-logging/error_and_logging/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^7.58.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@sentry/vite-plugin": "^2.4.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
